[gd_scene load_steps=6 format=3 uid="uid://c0txemthvbswp"]

[ext_resource type="Script" path="res://src/player/player.gd" id="1_je5x4"]
[ext_resource type="PackedScene" uid="uid://cbv6w5mdm1mly" path="res://src/weapons/wand.tscn" id="2_msfam"]
[ext_resource type="PackedScene" uid="uid://da8lss11k80r6" path="res://src/weapons/dagger/dagger.tscn" id="3_swyww"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_70ct1"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tv64a"]

[node name="Player" type="CharacterBody3D" groups=["creatures", "player"]]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, 0)
collision_layer = 34
collision_mask = 7
script = ExtResource("1_je5x4")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_70ct1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_tv64a")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="Hand" type="Node3D" parent="Head/Camera3D"]
transform = Transform3D(0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, 0.5, 0.635137, -0.354859, -0.707572)

[node name="Dagger" parent="Head/Camera3D/Hand" instance=ExtResource("3_swyww")]

[node name="Wand" parent="Head/Camera3D/Hand" instance=ExtResource("2_msfam")]
visible = false

[node name="CrosshairCast" type="RayCast3D" parent="Head/Camera3D"]
target_position = Vector3(0, -1, -1000)
collision_mask = 13

[node name="InteractablesCast" type="RayCast3D" parent="Head/Camera3D"]
target_position = Vector3(0, 0, -3)
collision_mask = 16

[node name="MovementSpeedTimer" type="Timer" parent="."]
one_shot = true

[node name="PotionTimer" type="Timer" parent="."]

[connection signal="timeout" from="MovementSpeedTimer" to="." method="_on_movement_speed_timer_timeout"]
[connection signal="timeout" from="PotionTimer" to="." method="_on_potion_timer_timeout"]
